make error codes enums
